--- a/src/react-app/App.css
+++ b/src/react-app/App.css
@@ -7,7 +7,8 @@
 
 .leaflet-container {
   height: 400px;
-  width: 100%;
+  width: 80%;
+  max-width: 800px;
   margin: 1rem 0;
 }
 
@@ -48,4 +49,17 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+footer {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: auto;
 }
